# ncdex-rain-mumbai-arena

./: .gitignore  README.md  arena.db  config.py  pyproject.toml  requirements.txt
.github/workflows/: daily_arena.yml
api/: app.py  schemas.py
api/routes/: leaderboard.py  markets.py  models.py  predictions.py  trades.py
core/: db.py  paper_trader.py  registry.py  resolver.py  runner.py  scorer.py
dashboard/: app.py
dashboard/components/: charts.py
dashboard/pages/: 1_leaderboard.py  2_predictions.py  3_trades.py  4_model_detail.py  5_data_explorer.py
data/: ghcnd.py  ncdex.py  open_meteo.py  polymarket.py
models/: base.py  exponential_smoothing.py  moving_average.py  persistence.py
scripts/: backfill.py  run_daily.py  seed_db.py
tests/: test_models.py
