[project]
name = "weather-arena"
version = "0.1.0"
description = "Forecasting arena for weather prediction markets"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "streamlit>=1.38",
    "requests>=2.31",
    "numpy>=1.26",
    "pandas>=2.1",
    "plotly>=5.18",
    "pydantic>=2.5",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
